@@ -30,7 +30,9 @@ RELEASE NOTES
     Implemented protected/1 and private/1 properties for objects, protocols,
     and categories. Together with the public/1 property, these properties
     allows the list of predicates declared in the entity to be accessed for
-    reflective computations.
+    reflective computations. Implemented declares/2 and defines/2 properties
+    for accessing the properties of predicates declared and defined within an
+    entity.
 
     Implemented compiler support for the meta_non_terminal/1 directive and the
     call//N built-in non-terminal.
